2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_paned.h, src/gimv_hpaned.h, src/gimv_vpaned.h: Removed.
	* src/Makefile.am, src/gtkutil.[ch], src/gimv_prefs_win.c,
	  src/gimv_thumb_win.c, src/gtk2-compat.c:
	Follow the change.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in, src/gimv_dupl_win.c, src/gimv_prefs_win.c,
	  src/prefs_ui/prefs_ui_thumbwin.c, plugins/image_loader/prefs_spi.c:
	Remove ENABLE_TREEVIEW.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in: Remove USE_GTK2 and USE_NORMAL_PANED.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb.[ch], src/gimv_image_win.c, src/gimv_image_loader.c,
	  src/gimv_image_saver.c, src/gtkutils.c, src/gimv_prefs_win.c,
	  src/gimv_plugin.c, src/gimv_thumb_win.[ch], src/gimv_thumb_view.c,
	  src/gimv_nav_win.c, src/gimv_icon_stock.[ch], src/gimv_zlist.c,
	  src/gtk2-compat.c, src/gimv_scrolled.c, src/gimv_zalbum.c:
	Remove USE_GTK2.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_paned.c. src/gimv_hpaned.c, src/gimv_vpaned.c: Removed.d
	* src/Makefile.am: Ditto.
	* src/gimv_paned.h, src/gimv_hpaned.h, src/gimv_vpaned.h,
	  src/japanese.c, src/gtk2-compat.[ch]:
	Remove USE_GTK2.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dlist.c, src/gimv_dupl_win.c, src/gimv_dupl_finder.c,
	  src/menu.[ch], src/prefs.c, src/text_viewer.c, src/help.c,
	  prefs_ui/prefs_ui_common.c, prefs_ui/prefs_ui_plugin.c,
	  src/gimv_elist.c:
	Remove USE_GTK2.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/dnd.c, src/exif_view.c, src/fr-archive.c, src/fr-command.c,
	  src/fr-process.c, src/gimv_comment.c, src/gimv_comment_view.c:
	Remove USE_GTK2.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/dirview_priv.h: Removed.
	* src/Makefile.am: Ditto
	* src/dirview.c: Moved codes in dirview_priv.h to this file.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/charset.[ch], src/auto_completion.c: Remove USE_GTK2.
	* src/Makefile.am, src/dirview.c, src/dirview2.c: