@@ -31,7 +31,6 @@
 #include "gimv_thumb_view.h"
 #include "gimv_thumb_win.h"
 #include "gtkutils.h"
-#include "gtk2-compat.h"
 #include "menu.h"
 #include "prefs.h"
 #include "prefs_ui_thumbwin.h"
