@@ -1,5 +1,10 @@
 2007-10-12 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gtk2-compat.[ch]: Removed.
+	* src/Makefile.am, *.[ch]: Follow the change.
+
+2007-10-12 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_paned.h, src/gimv_hpaned.h, src/gimv_vpaned.h: Removed.
 	* src/Makefile.am, src/gtkutil.[ch], src/gimv_prefs_win.c,
 	  src/gimv_thumb_win.c, src/gtk2-compat.c:
